Update openapi sdk based on new specification
